--- a/v.html
+++ b/v.html
@@ -16,7 +16,7 @@
        Place:Vijayawada<br>
        State:Andhra Pradesh-->
       </div>
-    <div class="content-child">
+  <!--  <div class="content-child">
         <h3><u><b>Career Objective:-</b></u></h3>
             <p>To work for an organization which provides me the opportunity to improve my skills and knowledge to growth along with the organization objective.</p>
             <h3><u><b>Acedemics:-</b></u></h3>
@@ -26,7 +26,7 @@
                  <li>Schooling from Sri chaitanya Techno school with 9.3 GPA.</li>
               </ol>
       </div>
-    </div>
+    </div>-->
     <script type="text/javascript" src="index.js"></script>
   </body>
 </html>
